--- a/frontend/index.html
+++ b/frontend/index.html
@@ -292,7 +292,7 @@
       hideSuccess();
 
       try {
-        const response = await fetch("https://blogapp-nm54.onrender.com", {
+        const response = await fetch("https://blogapp-nm54.onrender.com/generate-blog", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ prompt })
